src/y.output
   0  $accept : programa $end

   1  $$1 :

   2  $$2 :

   3  programa : ID '{' $$1 sentencias '}' $$2

   4  $$3 :

   5  $$4 :

   6  programa : '{' $$3 sentencias '}' $$4

   7  sentencias : sentencias sentencia
   8             | sentencia

   9  sentencia : sentencia_declarativa
  10            | sentencia_ejecutable
  11            | error ';'

  12  sentencia_declarativa : funcion
  13                        | declaracion_var ';'

  14  declaracion_var : VAR variable ASIG expresion

  15  tipo : UINT
  16       | FLOAT
  17       | LAMBDA

  18  lista_variables : lista_variables ',' variable
  19                  | variable

  20  $$5 :

  21  funcion : tipo ID '(' lista_parametros_formales ')' '{' $$5 sentencias '}'

  22  $$6 :

  23  funcion : lista_tipos_retorno_multiple ID '(' lista_parametros_formales ')' '{' $$6 sentencias '}'

  24  lista_tipos_retorno_multiple : tipo ',' tipo
  25                               | lista_tipos_retorno_multiple ',' tipo

  26  lista_parametros_formales : lista_parametros_formales ',' parametro_formal
  27                            | parametro_formal

  28  parametro_formal : sem_pasaje tipo ID
  29                   | tipo ID

  30  sem_pasaje : CR SE
  31             | CR LE

  32  sentencia_ejecutable : asignacion ';'
  33                       | asignacion_multiple ';'
  34                       | condicional_if
  35                       | condicional_do_while
  36                       | salida_pantalla ';'
  37                       | retorno_funcion
  38                       | invocacion_funcion ';'

  39  asignacion : variable ASIG expresion

  40  asignacion_multiple : lista_variables ASIG_MULTIPLE lado_derecho_multiple

  41  $$7 :

  42  lado_derecho_multiple : $$7 factor
  43                        | lado_derecho_multiple ',' factor

  44  variable : ID PUNTO ID
  45           | ID

  46  expresion : expresion '+' termino
  47            | expresion '-' termino
  48            | termino

  49  termino : termino '*' factor
  50          | termino '/' factor
  51          | factor

  52  factor : factor_no_funcion
  53         | invocacion_funcion

  54  factor_no_funcion : variable
  55                    | constante
  56                    | conversion_explicita

  57  conversion_explicita : TOUI '(' expresion ')'

  58  pre_invocacion :

  59  invocacion_funcion : ID pre_invocacion '(' lista_parametros_reales ')'

  60  lista_parametros_reales : lista_parametros_reales ',' parametro_real
  61                          | parametro_real

  62  parametro_real : parametro_simple FLECHA variable
  63                 | parametro_simple

  64  parametro_simple : expresion
  65                   | lambda_expresion

  66  $$8 :

  67  lambda_expresion : '(' tipo ID ')' '{' $$8 cuerpo_lambda '}'

  68  cuerpo_lambda : sentencias_ejecutables_lista
  69                |

  70  sentencias_ejecutables_lista : sentencias_ejecutables_lista sentencia_ejecutable
  71                               | sentencia_ejecutable
  72                               | sentencias_ejecutables_lista declaracion_ilegal
  73                               | declaracion_ilegal

  74  $$9 :

  75  declaracion_ilegal : VAR $$9 error ';'

  76  constante : CTE
  77            | '-' CTE

  78  if_encabezado : IF '(' condicion ')'

  79  condicional_if : if_encabezado bloque_ejecutable ENDIF ';'

  80  $$10 :

  81  condicional_if : if_encabezado bloque_ejecutable ELSE $$10 bloque_ejecutable ENDIF ';'

  82  $$11 :

  83  condicional_do_while : DO $$11 bloque_ejecutable WHILE '(' condicion ')' ';'

  84  condicion : expresion simbolo_comparacion expresion

  85  simbolo_comparacion : MAYOR_IGUAL
  86                      | MENOR_IGUAL
  87                      | DISTINTO
  88                      | IGUAL_IGUAL
  89                      | '>'
  90                      | '<'

  91  $$12 :

  92  bloque_ejecutable : '{' $$12 sentencias_ejecutables_lista '}'

  93  $$13 :

  94  bloque_ejecutable : '{' $$13 '}'
  95                    | '{' error '}'

  96  salida_pantalla : PRINT '(' CADENA_MULTILINEA ')'
  97                  | PRINT '(' expresion ')'

  98  $$14 :

  99  retorno_funcion : RETURN '(' $$14 lista_expresiones ')' ';'

 100  lista_expresiones : lista_expresiones ',' expresion
 101                    | expresion

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	'{'  shift 2
	.  error

	programa  goto 3


state 1
	programa : ID . '{' $$1 sentencias '}' $$2  (3)

	'{'  shift 4
	.  error


state 2
	programa : '{' . $$3 sentencias '}' $$4  (6)
	$$3 : .  (4)

	.  reduce 4

	$$3  goto 5


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : ID '{' . $$1 sentencias '}' $$2  (3)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 6


state 5
	programa : '{' $$3 . sentencias '}' $$4  (6)

	error  shift 7
	ID  shift 8
	IF  shift 9
	FLOAT  shift 10
	RETURN  shift 11
	PRINT  shift 12
	UINT  shift 13
	VAR  shift 14
	DO  shift 15
	LAMBDA  shift 16
	.  error

	sentencias  goto 17
	sentencia  goto 18
	sentencia_declarativa  goto 19
	sentencia_ejecutable  goto 20
	funcion  goto 21
	declaracion_var  goto 22
	variable  goto 23
	tipo  goto 24
	lista_variables  goto 25
	lista_tipos_retorno_multiple  goto 26
	asignacion  goto 27
	asignacion_multiple  goto 28
	condicional_if  goto 29
	condicional_do_while  goto 30
	salida_pantalla  goto 31
	retorno_funcion  goto 32
	invocacion_funcion  goto 33
	if_encabezado  goto 34


state 6
	programa : ID '{' $$1 . sentencias '}' $$2  (3)

	error  shift 7
	ID  shift 8
	IF  shift 9
	FLOAT  shift 10
	RETURN  shift 11
	PRINT  shift 12
	UINT  shift 13
	VAR  shift 14
	DO  shift 15
	LAMBDA  shift 16
	.  error

	sentencias  goto 35
	sentencia  goto 18
	sentencia_declarativa  goto 19
	sentencia_ejecutable  goto 20
	funcion  goto 21
	declaracion_var  goto 22
	variable  goto 23
	tipo  goto 24
	lista_variables  goto 25
	lista_tipos_retorno_multiple  goto 26
	asignacion  goto 27
	asignacion_multiple  goto 28
	condicional_if  goto 29
	condicional_do_while  goto 30
	salida_pantalla  goto 31
	retorno_funcion  goto 32
	invocacion_funcion  goto 33
	if_encabezado  goto 34


state 7
	sentencia : error . ';'  (11)

	';'  shift 36
	.  error


state 8
	variable : ID . PUNTO ID  (44)
	variable : ID .  (45)
	invocacion_funcion : ID . pre_invocacion '(' lista_parametros_reales ')'  (59)
	pre_invocacion : .  (58)

	PUNTO  shift 37
	ASIG_MULTIPLE  reduce 45
	ASIG  reduce 45
	FLECHA  reduce 45
	MAYOR_IGUAL  reduce 45
	MENOR_IGUAL  reduce 45
	DISTINTO  reduce 45
	IGUAL_IGUAL  reduce 45
	';'  reduce 45
	','  reduce 45
	'('  reduce 58
	')'  reduce 45
	'+'  reduce 45
	'-'  reduce 45
	'*'  reduce 45
	'/'  reduce 45
	'>'  reduce 45
	'<'  reduce 45

	pre_invocacion  goto 38


state 9
	if_encabezado : IF . '(' condicion ')'  (78)

	'('  shift 39
	.  error


state 10
	tipo : FLOAT .  (16)

	.  reduce 16


state 11
	retorno_funcion : RETURN . '(' $$14 lista_expresiones ')' ';'  (99)

	'('  shift 40
	.  error


state 12
	salida_pantalla : PRINT . '(' CADENA_MULTILINEA ')'  (96)
	salida_pantalla : PRINT . '(' expresion ')'  (97)

	'('  shift 41
	.  error


state 13
	tipo : UINT .  (15)

	.  reduce 15


state 14
	declaracion_var : VAR . variable ASIG expresion  (14)

	ID  shift 42
	.  error

	variable  goto 43


state 15
	condicional_do_while : DO . $$11 bloque_ejecutable WHILE '(' condicion ')' ';'  (83)
	$$11 : .  (82)

	.  reduce 82

	$$11  goto 44


state 16
	tipo : LAMBDA .  (17)

	.  reduce 17


state 17
	programa : '{' $$3 sentencias . '}' $$4  (6)
	sentencias : sentencias . sentencia  (7)

	error  shift 7
	ID  shift 8
	IF  shift 9
	FLOAT  shift 10
	RETURN  shift 11
	PRINT  shift 12
	UINT  shift 13
	VAR  shift 14
	DO  shift 15
	LAMBDA  shift 16
	'}'  shift 45
	.  error

	sentencia  goto 46
	sentencia_declarativa  goto 19
	sentencia_ejecutable  goto 20
	funcion  goto 21
	declaracion_var  goto 22
	variable  goto 23
	tipo  goto 24
	lista_variables  goto 25
	lista_tipos_retorno_multiple  goto 26
	asignacion  goto 27
	asignacion_multiple  goto 28
	condicional_if  goto 29
	condicional_do_while  goto 30
	salida_pantalla  goto 31
	retorno_funcion  goto 32
	invocacion_funcion  goto 33
	if_encabezado  goto 34


state 18
	sentencias : sentencia .  (8)

	.  reduce 8


state 19
	sentencia : sentencia_declarativa .  (9)

	.  reduce 9


state 20
	sentencia : sentencia_ejecutable .  (10)

	.  reduce 10


state 21
	sentencia_declarativa : funcion .  (12)

	.  reduce 12


state 22
	sentencia_declarativa : declaracion_var . ';'  (13)

	';'  shift 47
	.  error


state 23
	lista_variables : variable .  (19)
	asignacion : variable . ASIG expresion  (39)

	ASIG  shift 48
	ASIG_MULTIPLE  reduce 19
	','  reduce 19


state 24
	funcion : tipo . ID '(' lista_parametros_formales ')' '{' $$5 sentencias '}'  (21)
	lista_tipos_retorno_multiple : tipo . ',' tipo  (24)

	ID  shift 49
	','  shift 50
	.  error


state 25
	lista_variables : lista_variables . ',' variable  (18)
	asignacion_multiple : lista_variables . ASIG_MULTIPLE lado_derecho_multiple  (40)

	ASIG_MULTIPLE  shift 51
	','  shift 52
	.  error


state 26
	funcion : lista_tipos_retorno_multiple . ID '(' lista_parametros_formales ')' '{' $$6 sentencias '}'  (23)
	lista_tipos_retorno_multiple : lista_tipos_retorno_multiple . ',' tipo  (25)

	ID  shift 53
	','  shift 54
	.  error


state 27
	sentencia_ejecutable : asignacion . ';'  (32)

	';'  shift 55
	.  error


state 28
	sentencia_ejecutable : asignacion_multiple . ';'  (33)

	';'  shift 56
	.  error


state 29
	sentencia_ejecutable : condicional_if .  (34)

	.  reduce 34


state 30
	sentencia_ejecutable : condicional_do_while .  (35)

	.  reduce 35


state 31
	sentencia_ejecutable : salida_pantalla . ';'  (36)

	';'  shift 57
	.  error


state 32
	sentencia_ejecutable : retorno_funcion .  (37)

	.  reduce 37


state 33
	sentencia_ejecutable : invocacion_funcion . ';'  (38)

	';'  shift 58
	.  error


state 34
	condicional_if : if_encabezado . bloque_ejecutable ENDIF ';'  (79)
	condicional_if : if_encabezado . bloque_ejecutable ELSE $$10 bloque_ejecutable ENDIF ';'  (81)

	'{'  shift 59
	.  error

	bloque_ejecutable  goto 60


state 35
	programa : ID '{' $$1 sentencias . '}' $$2  (3)
	sentencias : sentencias . sentencia  (7)

	error  shift 7
	ID  shift 8
	IF  shift 9
	FLOAT  shift 10
	RETURN  shift 11
	PRINT  shift 12
	UINT  shift 13
	VAR  shift 14
	DO  shift 15
	LAMBDA  shift 16
	'}'  shift 61
	.  error

	sentencia  goto 46
	sentencia_declarativa  goto 19
	sentencia_ejecutable  goto 20
	funcion  goto 21
	declaracion_var  goto 22
	variable  goto 23
	tipo  goto 24
	lista_variables  goto 25
	lista_tipos_retorno_multiple  goto 26
	asignacion  goto 27
	asignacion_multiple  goto 28
	condicional_if  goto 29
	condicional_do_while  goto 30
	salida_pantalla  goto 31
	retorno_funcion  goto 32
	invocacion_funcion  goto 33
	if_encabezado  goto 34


state 36
	sentencia : error ';' .  (11)

	.  reduce 11


state 37
	variable : ID PUNTO . ID  (44)

	ID  shift 62
	.  error


state 38
	invocacion_funcion : ID pre_invocacion . '(' lista_parametros_reales ')'  (59)

	'('  shift 63
	.  error


state 39
	if_encabezado : IF '(' . condicion ')'  (78)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	expresion  goto 68
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 71
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74
	condicion  goto 75


state 40
	retorno_funcion : RETURN '(' . $$14 lista_expresiones ')' ';'  (99)
	$$14 : .  (98)

	.  reduce 98

	$$14  goto 76


state 41
	salida_pantalla : PRINT '(' . CADENA_MULTILINEA ')'  (96)
	salida_pantalla : PRINT '(' . expresion ')'  (97)

	ID  shift 8
	CTE  shift 64
	CADENA_MULTILINEA  shift 77
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	expresion  goto 78
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 71
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 42
	variable : ID . PUNTO ID  (44)
	variable : ID .  (45)

	PUNTO  shift 37
	ASIG_MULTIPLE  reduce 45
	ASIG  reduce 45
	','  reduce 45
	')'  reduce 45


state 43
	declaracion_var : VAR variable . ASIG expresion  (14)

	ASIG  shift 79
	.  error


state 44
	condicional_do_while : DO $$11 . bloque_ejecutable WHILE '(' condicion ')' ';'  (83)

	'{'  shift 59
	.  error

	bloque_ejecutable  goto 80


state 45
	programa : '{' $$3 sentencias '}' . $$4  (6)
	$$4 : .  (5)

	.  reduce 5

	$$4  goto 81


state 46
	sentencias : sentencias sentencia .  (7)

	.  reduce 7


state 47
	sentencia_declarativa : declaracion_var ';' .  (13)

	.  reduce 13


state 48
	asignacion : variable ASIG . expresion  (39)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	expresion  goto 82
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 71
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 49
	funcion : tipo ID . '(' lista_parametros_formales ')' '{' $$5 sentencias '}'  (21)

	'('  shift 83
	.  error


state 50
	lista_tipos_retorno_multiple : tipo ',' . tipo  (24)

	FLOAT  shift 10
	UINT  shift 13
	LAMBDA  shift 16
	.  error

	tipo  goto 84


state 51
	asignacion_multiple : lista_variables ASIG_MULTIPLE . lado_derecho_multiple  (40)
	$$7 : .  (41)

	.  reduce 41

	lado_derecho_multiple  goto 85
	$$7  goto 86


state 52
	lista_variables : lista_variables ',' . variable  (18)

	ID  shift 42
	.  error

	variable  goto 87


state 53
	funcion : lista_tipos_retorno_multiple ID . '(' lista_parametros_formales ')' '{' $$6 sentencias '}'  (23)

	'('  shift 88
	.  error


state 54
	lista_tipos_retorno_multiple : lista_tipos_retorno_multiple ',' . tipo  (25)

	FLOAT  shift 10
	UINT  shift 13
	LAMBDA  shift 16
	.  error

	tipo  goto 89


state 55
	sentencia_ejecutable : asignacion ';' .  (32)

	.  reduce 32


state 56
	sentencia_ejecutable : asignacion_multiple ';' .  (33)

	.  reduce 33


state 57
	sentencia_ejecutable : salida_pantalla ';' .  (36)

	.  reduce 36


state 58
	sentencia_ejecutable : invocacion_funcion ';' .  (38)

	.  reduce 38


state 59
	bloque_ejecutable : '{' . $$12 sentencias_ejecutables_lista '}'  (92)
	bloque_ejecutable : '{' . $$13 '}'  (94)
	bloque_ejecutable : '{' . error '}'  (95)
	$$12 : .  (91)
	$$13 : .  (93)

	error  shift 90
	ID  reduce 91
	IF  reduce 91
	RETURN  reduce 91
	PRINT  reduce 91
	VAR  reduce 91
	DO  reduce 91
	'}'  reduce 93

	$$12  goto 91
	$$13  goto 92


state 60
	condicional_if : if_encabezado bloque_ejecutable . ENDIF ';'  (79)
	condicional_if : if_encabezado bloque_ejecutable . ELSE $$10 bloque_ejecutable ENDIF ';'  (81)

	ELSE  shift 93
	ENDIF  shift 94
	.  error


state 61
	programa : ID '{' $$1 sentencias '}' . $$2  (3)
	$$2 : .  (2)

	.  reduce 2

	$$2  goto 95


state 62
	variable : ID PUNTO ID .  (44)

	.  reduce 44


state 63
	invocacion_funcion : ID pre_invocacion '(' . lista_parametros_reales ')'  (59)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'('  shift 96
	'-'  shift 66
	.  error

	variable  goto 67
	expresion  goto 97
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 71
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74
	lista_parametros_reales  goto 98
	parametro_real  goto 99
	parametro_simple  goto 100
	lambda_expresion  goto 101


state 64
	constante : CTE .  (76)

	.  reduce 76


state 65
	conversion_explicita : TOUI . '(' expresion ')'  (57)

	'('  shift 102
	.  error


state 66
	constante : '-' . CTE  (77)

	CTE  shift 103
	.  error


state 67
	factor_no_funcion : variable .  (54)

	.  reduce 54


state 68
	expresion : expresion . '+' termino  (46)
	expresion : expresion . '-' termino  (47)
	condicion : expresion . simbolo_comparacion expresion  (84)

	MAYOR_IGUAL  shift 104
	MENOR_IGUAL  shift 105
	DISTINTO  shift 106
	IGUAL_IGUAL  shift 107
	'+'  shift 108
	'-'  shift 109
	'>'  shift 110
	'<'  shift 111
	.  error

	simbolo_comparacion  goto 112


state 69
	factor : invocacion_funcion .  (53)

	.  reduce 53


state 70
	termino : factor .  (51)

	.  reduce 51


state 71
	expresion : termino .  (48)
	termino : termino . '*' factor  (49)
	termino : termino . '/' factor  (50)

	'*'  shift 113
	'/'  shift 114
	FLECHA  reduce 48
	MAYOR_IGUAL  reduce 48
	MENOR_IGUAL  reduce 48
	DISTINTO  reduce 48
	IGUAL_IGUAL  reduce 48
	';'  reduce 48
	','  reduce 48
	')'  reduce 48
	'+'  reduce 48
	'-'  reduce 48
	'>'  reduce 48
	'<'  reduce 48


state 72
	factor : factor_no_funcion .  (52)

	.  reduce 52


state 73
	factor_no_funcion : constante .  (55)

	.  reduce 55


state 74
	factor_no_funcion : conversion_explicita .  (56)

	.  reduce 56


state 75
	if_encabezado : IF '(' condicion . ')'  (78)

	')'  shift 115
	.  error


state 76
	retorno_funcion : RETURN '(' $$14 . lista_expresiones ')' ';'  (99)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	expresion  goto 116
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 71
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74
	lista_expresiones  goto 117


state 77
	salida_pantalla : PRINT '(' CADENA_MULTILINEA . ')'  (96)

	')'  shift 118
	.  error


state 78
	expresion : expresion . '+' termino  (46)
	expresion : expresion . '-' termino  (47)
	salida_pantalla : PRINT '(' expresion . ')'  (97)

	')'  shift 119
	'+'  shift 108
	'-'  shift 109
	.  error


state 79
	declaracion_var : VAR variable ASIG . expresion  (14)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	expresion  goto 120
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 71
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 80
	condicional_do_while : DO $$11 bloque_ejecutable . WHILE '(' condicion ')' ';'  (83)

	WHILE  shift 121
	.  error


state 81
	programa : '{' $$3 sentencias '}' $$4 .  (6)

	.  reduce 6


state 82
	asignacion : variable ASIG expresion .  (39)
	expresion : expresion . '+' termino  (46)
	expresion : expresion . '-' termino  (47)

	'+'  shift 108
	'-'  shift 109
	';'  reduce 39


state 83
	funcion : tipo ID '(' . lista_parametros_formales ')' '{' $$5 sentencias '}'  (21)

	FLOAT  shift 10
	UINT  shift 13
	LAMBDA  shift 16
	CR  shift 122
	.  error

	tipo  goto 123
	lista_parametros_formales  goto 124
	parametro_formal  goto 125
	sem_pasaje  goto 126


state 84
	lista_tipos_retorno_multiple : tipo ',' tipo .  (24)

	.  reduce 24


state 85
	asignacion_multiple : lista_variables ASIG_MULTIPLE lado_derecho_multiple .  (40)
	lado_derecho_multiple : lado_derecho_multiple . ',' factor  (43)

	','  shift 127
	';'  reduce 40


state 86
	lado_derecho_multiple : $$7 . factor  (42)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	invocacion_funcion  goto 69
	factor  goto 128
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 87
	lista_variables : lista_variables ',' variable .  (18)

	.  reduce 18


state 88
	funcion : lista_tipos_retorno_multiple ID '(' . lista_parametros_formales ')' '{' $$6 sentencias '}'  (23)

	FLOAT  shift 10
	UINT  shift 13
	LAMBDA  shift 16
	CR  shift 122
	.  error

	tipo  goto 123
	lista_parametros_formales  goto 129
	parametro_formal  goto 125
	sem_pasaje  goto 126


state 89
	lista_tipos_retorno_multiple : lista_tipos_retorno_multiple ',' tipo .  (25)

	.  reduce 25


state 90
	bloque_ejecutable : '{' error . '}'  (95)

	'}'  shift 130
	.  error


state 91
	bloque_ejecutable : '{' $$12 . sentencias_ejecutables_lista '}'  (92)

	ID  shift 8
	IF  shift 9
	RETURN  shift 11
	PRINT  shift 12
	VAR  shift 131
	DO  shift 15
	.  error

	sentencia_ejecutable  goto 132
	variable  goto 23
	lista_variables  goto 25
	asignacion  goto 27
	asignacion_multiple  goto 28
	condicional_if  goto 29
	condicional_do_while  goto 30
	salida_pantalla  goto 31
	retorno_funcion  goto 32
	invocacion_funcion  goto 33
	sentencias_ejecutables_lista  goto 133
	declaracion_ilegal  goto 134
	if_encabezado  goto 34


state 92
	bloque_ejecutable : '{' $$13 . '}'  (94)

	'}'  shift 135
	.  error


state 93
	condicional_if : if_encabezado bloque_ejecutable ELSE . $$10 bloque_ejecutable ENDIF ';'  (81)
	$$10 : .  (80)

	.  reduce 80

	$$10  goto 136


state 94
	condicional_if : if_encabezado bloque_ejecutable ENDIF . ';'  (79)

	';'  shift 137
	.  error


state 95
	programa : ID '{' $$1 sentencias '}' $$2 .  (3)

	.  reduce 3


state 96
	lambda_expresion : '(' . tipo ID ')' '{' $$8 cuerpo_lambda '}'  (67)

	FLOAT  shift 10
	UINT  shift 13
	LAMBDA  shift 16
	.  error

	tipo  goto 138


state 97
	expresion : expresion . '+' termino  (46)
	expresion : expresion . '-' termino  (47)
	parametro_simple : expresion .  (64)

	'+'  shift 108
	'-'  shift 109
	FLECHA  reduce 64
	','  reduce 64
	')'  reduce 64


state 98
	invocacion_funcion : ID pre_invocacion '(' lista_parametros_reales . ')'  (59)
	lista_parametros_reales : lista_parametros_reales . ',' parametro_real  (60)

	','  shift 139
	')'  shift 140
	.  error


state 99
	lista_parametros_reales : parametro_real .  (61)

	.  reduce 61


state 100
	parametro_real : parametro_simple . FLECHA variable  (62)
	parametro_real : parametro_simple .  (63)

	FLECHA  shift 141
	','  reduce 63
	')'  reduce 63


state 101
	parametro_simple : lambda_expresion .  (65)

	.  reduce 65


state 102
	conversion_explicita : TOUI '(' . expresion ')'  (57)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	expresion  goto 142
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 71
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 103
	constante : '-' CTE .  (77)

	.  reduce 77


state 104
	simbolo_comparacion : MAYOR_IGUAL .  (85)

	.  reduce 85


state 105
	simbolo_comparacion : MENOR_IGUAL .  (86)

	.  reduce 86


state 106
	simbolo_comparacion : DISTINTO .  (87)

	.  reduce 87


state 107
	simbolo_comparacion : IGUAL_IGUAL .  (88)

	.  reduce 88


state 108
	expresion : expresion '+' . termino  (46)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 143
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 109
	expresion : expresion '-' . termino  (47)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 144
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 110
	simbolo_comparacion : '>' .  (89)

	.  reduce 89


state 111
	simbolo_comparacion : '<' .  (90)

	.  reduce 90


state 112
	condicion : expresion simbolo_comparacion . expresion  (84)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	expresion  goto 145
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 71
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 113
	termino : termino '*' . factor  (49)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	invocacion_funcion  goto 69
	factor  goto 146
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 114
	termino : termino '/' . factor  (50)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	invocacion_funcion  goto 69
	factor  goto 147
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 115
	if_encabezado : IF '(' condicion ')' .  (78)

	.  reduce 78


state 116
	expresion : expresion . '+' termino  (46)
	expresion : expresion . '-' termino  (47)
	lista_expresiones : expresion .  (101)

	'+'  shift 108
	'-'  shift 109
	','  reduce 101
	')'  reduce 101


state 117
	retorno_funcion : RETURN '(' $$14 lista_expresiones . ')' ';'  (99)
	lista_expresiones : lista_expresiones . ',' expresion  (100)

	','  shift 148
	')'  shift 149
	.  error


state 118
	salida_pantalla : PRINT '(' CADENA_MULTILINEA ')' .  (96)

	.  reduce 96


state 119
	salida_pantalla : PRINT '(' expresion ')' .  (97)

	.  reduce 97


state 120
	declaracion_var : VAR variable ASIG expresion .  (14)
	expresion : expresion . '+' termino  (46)
	expresion : expresion . '-' termino  (47)

	'+'  shift 108
	'-'  shift 109
	';'  reduce 14


state 121
	condicional_do_while : DO $$11 bloque_ejecutable WHILE . '(' condicion ')' ';'  (83)

	'('  shift 150
	.  error


state 122
	sem_pasaje : CR . SE  (30)
	sem_pasaje : CR . LE  (31)

	SE  shift 151
	LE  shift 152
	.  error


state 123
	parametro_formal : tipo . ID  (29)

	ID  shift 153
	.  error


state 124
	funcion : tipo ID '(' lista_parametros_formales . ')' '{' $$5 sentencias '}'  (21)
	lista_parametros_formales : lista_parametros_formales . ',' parametro_formal  (26)

	','  shift 154
	')'  shift 155
	.  error


state 125
	lista_parametros_formales : parametro_formal .  (27)

	.  reduce 27


state 126
	parametro_formal : sem_pasaje . tipo ID  (28)

	FLOAT  shift 10
	UINT  shift 13
	LAMBDA  shift 16
	.  error

	tipo  goto 156


state 127
	lado_derecho_multiple : lado_derecho_multiple ',' . factor  (43)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'-'  shift 66
	.  error

	variable  goto 67
	invocacion_funcion  goto 69
	factor  goto 157
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74


state 128
	lado_derecho_multiple : $$7 factor .  (42)

	.  reduce 42


state 129
	funcion : lista_tipos_retorno_multiple ID '(' lista_parametros_formales . ')' '{' $$6 sentencias '}'  (23)
	lista_parametros_formales : lista_parametros_formales . ',' parametro_formal  (26)

	','  shift 154
	')'  shift 158
	.  error


state 130
	bloque_ejecutable : '{' error '}' .  (95)

	.  reduce 95


state 131
	declaracion_ilegal : VAR . $$9 error ';'  (75)
	$$9 : .  (74)

	error  reduce 74

	$$9  goto 159


state 132
	sentencias_ejecutables_lista : sentencia_ejecutable .  (71)

	.  reduce 71


state 133
	sentencias_ejecutables_lista : sentencias_ejecutables_lista . sentencia_ejecutable  (70)
	sentencias_ejecutables_lista : sentencias_ejecutables_lista . declaracion_ilegal  (72)
	bloque_ejecutable : '{' $$12 sentencias_ejecutables_lista . '}'  (92)

	ID  shift 8
	IF  shift 9
	RETURN  shift 11
	PRINT  shift 12
	VAR  shift 131
	DO  shift 15
	'}'  shift 160
	.  error

	sentencia_ejecutable  goto 161
	variable  goto 23
	lista_variables  goto 25
	asignacion  goto 27
	asignacion_multiple  goto 28
	condicional_if  goto 29
	condicional_do_while  goto 30
	salida_pantalla  goto 31
	retorno_funcion  goto 32
	invocacion_funcion  goto 33
	declaracion_ilegal  goto 162
	if_encabezado  goto 34


state 134
	sentencias_ejecutables_lista : declaracion_ilegal .  (73)

	.  reduce 73


state 135
	bloque_ejecutable : '{' $$13 '}' .  (94)

	.  reduce 94


state 136
	condicional_if : if_encabezado bloque_ejecutable ELSE $$10 . bloque_ejecutable ENDIF ';'  (81)

	'{'  shift 59
	.  error

	bloque_ejecutable  goto 163


state 137
	condicional_if : if_encabezado bloque_ejecutable ENDIF ';' .  (79)

	.  reduce 79


state 138
	lambda_expresion : '(' tipo . ID ')' '{' $$8 cuerpo_lambda '}'  (67)

	ID  shift 164
	.  error


state 139
	lista_parametros_reales : lista_parametros_reales ',' . parametro_real  (60)

	ID  shift 8
	CTE  shift 64
	TOUI  shift 65
	'('  shift 96
	'-'  shift 66
	.  error

	variable  goto 67
	expresion  goto 97
	invocacion_funcion  goto 69
	factor  goto 70
	termino  goto 71
	factor_no_funcion  goto 72
	constante  goto 73
	conversion_explicita  goto 74
	parametro_real  goto 165
	parametro_simple  goto 100
	lambda_expresion  goto 101


state 140
	invocacion_funcion : ID pre_invocacion '(' lista_parametros_reales ')' .  (59)

	.  reduce 59


state 141
	parametro_real : parametro_simple FLECHA . variable  (62)

	ID  shift 42
	.  error

	variable  goto 166


state 142
	expresion : expresion . '+' termino  (46)
	expresion : expresion . '-' termino  (47)
	conversion_explicita : TOUI '(' expresion . ')'  (57)

	')'  shift 167
	'+'  shift 108
	'-'  shift 109
	.  error

